src/grammar/nscParser.py
# Generated from nsc.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class nscParser ( Parser ):

    grammarFileName = "nsc.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'^'", "'('", "')'", "'='", "';'", "'begin'", 
                     "'end'", "'print'", "','", "'if'", "'then'", "'else'", 
                     "'while'", "'do'", "'for'", "'of'", "'to'", "'loop'", 
                     "':'", "'>'", "'<='", "'>='", "'=='", "'!='", "'<'", 
                     "'*'", "'/'", "'%'", "'+'", "'-'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "ID", "NUMBER", 
                      "STRING", "WS", "COMMENT" ]

    RULE_program = 0
    RULE_statements = 1
    RULE_statement = 2
    RULE_expr = 3
    RULE_cumTerm = 4
    RULE_term = 5
    RULE_factor = 6
    RULE_exponent = 7
    RULE_assign_statement = 8
    RULE_begin_end_statement = 9
    RULE_print_simple = 10
    RULE_print_literal = 11
    RULE_if_else_statement = 12
    RULE_while_statement = 13
    RULE_for_statement = 14
    RULE_loop_statement = 15
    RULE_cumopr = 16
    RULE_multiplicative = 17
    RULE_additive = 18

    ruleNames =  [ "program", "statements", "statement", "expr", "cumTerm", 
                   "term", "factor", "exponent", "assign_statement", "begin_end_statement", 
                   "print_simple", "print_literal", "if_else_statement", 
                   "while_statement", "for_statement", "loop_statement", 
                   "cumopr", "multiplicative", "additive" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    ID=31
    NUMBER=32
    STRING=33
    WS=34
    COMMENT=35

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statements(self):
            return self.getTypedRuleContext(nscParser.StatementsContext,0)


        def getRuleIndex(self):
            return nscParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = nscParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 38
            self.statements()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(nscParser.StatementContext)
            else:
                return self.getTypedRuleContext(nscParser.StatementContext,i)


        def getRuleIndex(self):
            return nscParser.RULE_statements

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatements" ):
                listener.enterStatements(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatements" ):
                listener.exitStatements(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatements" ):
                return visitor.visitStatements(self)
            else:
                return visitor.visitChildren(self)




    def statements(self):

        localctx = nscParser.StatementsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statements)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 43
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 2147788096) != 0):
                self.state = 40
                self.statement()
                self.state = 45
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assign_statement(self):
            return self.getTypedRuleContext(nscParser.Assign_statementContext,0)


        def begin_end_statement(self):
            return self.getTypedRuleContext(nscParser.Begin_end_statementContext,0)


        def if_else_statement(self):
            return self.getTypedRuleContext(nscParser.If_else_statementContext,0)


        def while_statement(self):
            return self.getTypedRuleContext(nscParser.While_statementContext,0)


        def for_statement(self):
            return self.getTypedRuleContext(nscParser.For_statementContext,0)


        def loop_statement(self):
            return self.getTypedRuleContext(nscParser.Loop_statementContext,0)


        def print_simple(self):
            return self.getTypedRuleContext(nscParser.Print_simpleContext,0)


        def print_literal(self):
            return self.getTypedRuleContext(nscParser.Print_literalContext,0)


        def getRuleIndex(self):
            return nscParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = nscParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_statement)
        try:
            self.state = 54
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 46
                self.assign_statement()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 47
                self.begin_end_statement()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 48
                self.if_else_statement()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 49
                self.while_statement()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 50
                self.for_statement()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 51
                self.loop_statement()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 52
                self.print_simple()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 53
                self.print_literal()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def cumTerm(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(nscParser.CumTermContext)
            else:
                return self.getTypedRuleContext(nscParser.CumTermContext,i)


        def cumopr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(nscParser.CumoprContext)
            else:
                return self.getTypedRuleContext(nscParser.CumoprContext,i)


        def getRuleIndex(self):
            return nscParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)




    def expr(self):

        localctx = nscParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_expr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            self.cumTerm()
            self.state = 62
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 66060288) != 0):
                self.state = 57
                self.cumopr()
                self.state = 58
                self.cumTerm()
                self.state = 64
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CumTermContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def term(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(nscParser.TermContext)
            else:
                return self.getTypedRuleContext(nscParser.TermContext,i)


        def additive(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(nscParser.AdditiveContext)
            else:
                return self.getTypedRuleContext(nscParser.AdditiveContext,i)


        def getRuleIndex(self):
            return nscParser.RULE_cumTerm

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCumTerm" ):
                listener.enterCumTerm(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCumTerm" ):
                listener.exitCumTerm(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCumTerm" ):
                return visitor.visitCumTerm(self)
            else:
                return visitor.visitChildren(self)




    def cumTerm(self):

        localctx = nscParser.CumTermContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_cumTerm)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self.term()
            self.state = 71
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==29 or _la==30:
                self.state = 66
                self.additive()
                self.state = 67
                self.term()
                self.state = 73
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TermContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def factor(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(nscParser.FactorContext)
            else:
                return self.getTypedRuleContext(nscParser.FactorContext,i)


        def multiplicative(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(nscParser.MultiplicativeContext)
            else:
                return self.getTypedRuleContext(nscParser.MultiplicativeContext,i)


        def getRuleIndex(self):
            return nscParser.RULE_term

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTerm" ):
                listener.enterTerm(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTerm" ):
                listener.exitTerm(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTerm" ):
                return visitor.visitTerm(self)
            else:
                return visitor.visitChildren(self)




    def term(self):

        localctx = nscParser.TermContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_term)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.factor()
            self.state = 80
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 469762048) != 0):
                self.state = 75
                self.multiplicative()
                self.state = 76
                self.factor()
                self.state = 82
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FactorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exponent(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(nscParser.ExponentContext)
            else:
                return self.getTypedRuleContext(nscParser.ExponentContext,i)


        def getRuleIndex(self):
            return nscParser.RULE_factor

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFactor" ):
                listener.enterFactor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFactor" ):
                listener.exitFactor(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFactor" ):
                return visitor.visitFactor(self)
            else:
                return visitor.visitChildren(self)




    def factor(self):

        localctx = nscParser.FactorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_factor)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.exponent()
            self.state = 88
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1:
                self.state = 84
                self.match(nscParser.T__0)
                self.state = 85
                self.exponent()
                self.state = 90
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExponentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return nscParser.RULE_exponent

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ParenthesizedExpressionContext(ExponentContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a nscParser.ExponentContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(nscParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParenthesizedExpression" ):
                listener.enterParenthesizedExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParenthesizedExpression" ):
                listener.exitParenthesizedExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParenthesizedExpression" ):
                return visitor.visitParenthesizedExpression(self)
            else:
                return visitor.visitChildren(self)


    class IdentifierContext(ExponentContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a nscParser.ExponentContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(nscParser.ID, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdentifier" ):
                listener.enterIdentifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdentifier" ):
                listener.exitIdentifier(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdentifier" ):
                return visitor.visitIdentifier(self)
            else:
                return visitor.visitChildren(self)


    class NumberContext(ExponentContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a nscParser.ExponentContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NUMBER(self):
            return self.getToken(nscParser.NUMBER, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNumber" ):
                listener.enterNumber(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNumber" ):
                listener.exitNumber(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNumber" ):
                return visitor.visitNumber(self)
            else:
                return visitor.visitChildren(self)



    def exponent(self):

        localctx = nscParser.ExponentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_exponent)
        try:
            self.state = 97
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [2]:
                localctx = nscParser.ParenthesizedExpressionContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 91
                self.match(nscParser.T__1)
                self.state = 92
                self.expr()
                self.state = 93
                self.match(nscParser.T__2)
                pass
            elif token in [31]:
                localctx = nscParser.IdentifierContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 95
                self.match(nscParser.ID)
                pass
            elif token in [32]:
                localctx = nscParser.NumberContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 96
                self.match(nscParser.NUMBER)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Assign_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(nscParser.ID, 0)

        def expr(self):
            return self.getTypedRuleContext(nscParser.ExprContext,0)


        def getRuleIndex(self):
            return nscParser.RULE_assign_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssign_statement" ):
                listener.enterAssign_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssign_statement" ):
                listener.exitAssign_statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssign_statement" ):
                return visitor.visitAssign_statement(self)
            else:
                return visitor.visitChildren(self)




    def assign_statement(self):

        localctx = nscParser.Assign_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_assign_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.match(nscParser.ID)
            self.state = 100
            self.match(nscParser.T__3)
            self.state = 101
            self.expr()
            self.state = 102
            self.match(nscParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Begin_end_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statements(self):
            return self.getTypedRuleContext(nscParser.StatementsContext,0)


        def getRuleIndex(self):
            return nscParser.RULE_begin_end_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBegin_end_statement" ):
                listener.enterBegin_end_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBegin_end_statement" ):
                listener.exitBegin_end_statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBegin_end_statement" ):
                return visitor.visitBegin_end_statement(self)
            else:
                return visitor.visitChildren(self)




    def begin_end_statement(self):

        localctx = nscParser.Begin_end_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_begin_end_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(nscParser.T__5)
            self.state = 105
            self.statements()
            self.state = 106
            self.match(nscParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Print_simpleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(nscParser.ID, 0)

        def getRuleIndex(self):
            return nscParser.RULE_print_simple

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrint_simple" ):
                listener.enterPrint_simple(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrint_simple" ):
                listener.exitPrint_simple(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrint_simple" ):
                return visitor.visitPrint_simple(self)
            else:
                return visitor.visitChildren(self)




    def print_simple(self):

        localctx = nscParser.Print_simpleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_print_simple)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.match(nscParser.T__7)
            self.state = 109
            self.match(nscParser.ID)
            self.state = 110
            self.match(nscParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Print_literalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(nscParser.STRING, 0)

        def ID(self):
            return self.getToken(nscParser.ID, 0)

        def getRuleIndex(self):
            return nscParser.RULE_print_literal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrint_literal" ):
                listener.enterPrint_literal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrint_literal" ):
                listener.exitPrint_literal(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrint_literal" ):
                return visitor.visitPrint_literal(self)
            else:
                return visitor.visitChildren(self)




    def print_literal(self):

        localctx = nscParser.Print_literalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_print_literal)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.match(nscParser.T__7)
            self.state = 113
            self.match(nscParser.STRING)
            self.state = 114
            self.match(nscParser.T__8)
            self.state = 115
            self.match(nscParser.ID)
            self.state = 116
            self.match(nscParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class If_else_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(nscParser.ExprContext,0)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(nscParser.StatementContext)
            else:
                return self.getTypedRuleContext(nscParser.StatementContext,i)


        def getRuleIndex(self):
            return nscParser.RULE_if_else_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIf_else_statement" ):
                listener.enterIf_else_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIf_else_statement" ):
                listener.exitIf_else_statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIf_else_statement" ):
                return visitor.visitIf_else_statement(self)
            else:
                return visitor.visitChildren(self)




    def if_else_statement(self):

        localctx = nscParser.If_else_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_if_else_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.match(nscParser.T__9)
            self.state = 119
            self.expr()
            self.state = 120
            self.match(nscParser.T__10)
            self.state = 121
            self.statement()
            self.state = 124
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.state = 122
                self.match(nscParser.T__11)
                self.state = 123
                self.statement()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class While_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(nscParser.ExprContext,0)


        def statement(self):
            return self.getTypedRuleContext(nscParser.StatementContext,0)


        def getRuleIndex(self):
            return nscParser.RULE_while_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhile_statement" ):
                listener.enterWhile_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhile_statement" ):
                listener.exitWhile_statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhile_statement" ):
                return visitor.visitWhile_statement(self)
            else:
                return visitor.visitChildren(self)




    def while_statement(self):

        localctx = nscParser.While_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_while_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.match(nscParser.T__12)
            self.state = 127
            self.expr()
            self.state = 128
            self.match(nscParser.T__13)
            self.state = 129
            self.statement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class For_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(nscParser.ID, 0)

        def NUMBER(self, i:int=None):
            if i is None:
                return self.getTokens(nscParser.NUMBER)
            else:
                return self.getToken(nscParser.NUMBER, i)

        def statement(self):
            return self.getTypedRuleContext(nscParser.StatementContext,0)


        def getRuleIndex(self):
            return nscParser.RULE_for_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFor_statement" ):
                listener.enterFor_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFor_statement" ):
                listener.exitFor_statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFor_statement" ):
                return visitor.visitFor_statement(self)
            else:
                return visitor.visitChildren(self)




    def for_statement(self):

        localctx = nscParser.For_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_for_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self.match(nscParser.T__14)
            self.state = 132
            self.match(nscParser.ID)
            self.state = 133
            self.match(nscParser.T__15)
            self.state = 134
            self.match(nscParser.NUMBER)
            self.state = 135
            self.match(nscParser.T__16)
            self.state = 136
            self.match(nscParser.NUMBER)
            self.state = 137
            self.match(nscParser.T__13)
            self.state = 138
            self.statement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Loop_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(nscParser.ID, 0)

        def NUMBER(self):
            return self.getToken(nscParser.NUMBER, 0)

        def statement(self):
            return self.getTypedRuleContext(nscParser.StatementContext,0)


        def getRuleIndex(self):
            return nscParser.RULE_loop_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLoop_statement" ):
                listener.enterLoop_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLoop_statement" ):
                listener.exitLoop_statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLoop_statement" ):
                return visitor.visitLoop_statement(self)
            else:
                return visitor.visitChildren(self)




    def loop_statement(self):
